Updated POM and code